data/derived/comb/progs/unify/prog5977.ml.out
Characters 39-43:
  let _ = assoc (-1,"william",[("ranjit",[85]);("william",23);("moose",44)]);;
                                         ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
